added new speed calculation algorithm

--- a/src/app/main/main-calculate-typing-speed/main-calculate-typing-speed.component.html
+++ b/src/app/main/main-calculate-typing-speed/main-calculate-typing-speed.component.html
@@ -1,1 +1,3 @@
 <label *ngIf="showTypingSpeed">Your typing speed is {{currentTypingSpeed}}wpm</label>
+<label *ngIf="showTypingSpeed">Your new calcualted speed is {{newCalculatedSpeed}}wpm</label>
+<label *ngIf="showTypingSpeed">Your raw typing speed is {{calculatedRawSpeed}}wpm</label>
