--- a/src/app/styles/core.scss
+++ b/src/app/styles/core.scss
@@ -24,3 +24,9 @@ html, body {
   @extend .px-1 !optional;
   @extend .py-1 !optional;
 }
+
+.wrong-word{
+  background-color: red;
+  @extend .px-1 !optional;
+  @extend .py-1 !optional;
+}
