feat: difficulty levels

--- a/src/app/main/main-calculate-typing-speed/main-calculate-typing-speed.component.html
+++ b/src/app/main/main-calculate-typing-speed/main-calculate-typing-speed.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="showTypingSpeed">
+    <label>Difficulty: {{selectedDifficultyLevel}}</label>
+    <br>
     <label>Typing speed: {{currentTypingSpeed|number:'1.0-0'}}wpm</label>
     <br>
     <label>New calculated :{{newCalculatedSpeed|number:'1.0-0'}}wpm</label>
