--- a/src/app/styles/core.scss
+++ b/src/app/styles/core.scss
@@ -20,7 +20,7 @@ html, body {
 }
 
 .highlighted-word{
-  background-color: lightgrey;
+  background: transparent;
   transition: background-color 0.2s ease;
   @extend .px-2 !optional;
   @extend .py-2 !optional;
@@ -32,3 +32,4 @@ html, body {
   @extend .px-1 !optional;
   @extend .py-1 !optional;
 }
+
