--- a/src/app/main/main-home-page/main-home-page.component.html
+++ b/src/app/main/main-home-page/main-home-page.component.html
@@ -42,7 +42,7 @@
 
                     <div class="col-12 d-flex justify-content-center">
                         <button type="button" class="d-inline-block  b-1px-black"
-                                (click)=" textAreaElement.focus(); resetTest(); timer.reset(); speedCalculator.reset()">
+                                (click)=" textAreaElement.focus(); resetTest(); restartBackgroundUpdateSubscription(); timer.reset(); speedCalculator.reset()">
                             Restart test (tab+enter)
                         </button>
                     </div>
